# windopt

./: .gitignore  README.md  pyproject.toml  requirements.txt
campaigns/batch_4_mesh_20m/: experiment.json  trials.csv
campaigns/gch_only/: campaign_config.json  experiment.json  trials.csv
campaigns/les_only/: ax_client.json  campaign_config.json  experiment.json  trials.csv
campaigns/mf_alternating/: campaign_config.json  experiment.json  trials.csv
campaigns/mt50/: experiment.json  trials.csv
config/: les_base.in
data/: README.md
data/initial_trials/: small_arena_gch_trials.npy  small_arena_les_trials.npy
doc/: bempedelis-report.tex  intermediate-2025-1-14.tex  plan.tex  proposal.tex  references.bib  review.tex
scripts/: assess_gch_only.py  validate_les.py
src/: constants.py  gch.py  initial_points.py  les.py  main.py  parse_log.py  slurm.py  test_floris.py
src/windopt/: __init__.py  analyze_precursor.py  constants.py  gch.py  initial_points.py  layout.py  main.py  run_initial_trials.py  test_floris.py  validate_les.py
src/windopt/config/: gch_base.yaml  les_base.in
src/windopt/initial/: process_les_trials.py  run_gch_trials.py  run_les_trials.py  sample_points.py
src/windopt/optim/: ax_client.py  batch_counter.py  campaign.py  cli.py  config.py  constants.py  log.py  multitype.py  single_les.py  trial.py  utils.py
src/windopt/viz/: __init__.py  analyze_precursor.py  campaign.py  power_convergence.py  precursor.py  vector_field.py  velocity_field.py  velocity_flow.py
src/windopt/winc3d/: __init__.py  cli.py  config.py  io.py  les.py  (+1 more)
(+1 files in other folders)
