[project]
name = "windopt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aman Choudhri", email = "amanchoudhri@gmail.com" }
]
requires-python = "==3.9.7"
dependencies = [
    "ax-platform>=0.3.7",
    "f90nml>=1.4.4",
    "floris>=4.2.1",
]

[project.scripts]
windopt = "windopt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
